WP-12: project the neutral capability through Run
